# opass-hybrid-api

./: Cargo.toml  LICENSE  README.md  commands.sql  install.sh  opass.conf  opass.service  tolls.db3
src/: db.rs  handler.rs  main.rs  model.rs
